feat: add section News

--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
             </div>
           </div>
           <!-- Add Arrows -->
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next primary__swiper-button-next"></div>
+          <div class="swiper-button-prev primary__swiper-button-prev"></div>
         </div>
       <a href="index.html"><div class="button button--primary cases__button">Портфолио</div></a>
       </div>
@@ -428,6 +428,66 @@
       <!-- /.container -->
     </section>
     <!-- /.section review -->
+    <section class="section news">
+      <div class="container">
+        <div class="section__title news__title">
+          <h2>Последние новости</h2>
+        </div>
+        <div class="section__description news__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud ex</div>
+         <!-- Swiper -->
+        <div class="swiper-container news__swiper-container">
+          <div class="swiper-wrapper news__swiper-wrapper">
+            <div class="swiper-slide news_-swiper-slide">
+              <div class="news__row">
+                <img src="img/news/img.jpg" alt="img" class="news__image">
+                <div class="news__date"><strong class="news__date--strong">01</strong> <br> Апр</div>
+                <div class="news__card">
+                  <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
+                  <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
+                  <a href="index.html"><button class="button news__button button--primary">Читать далее</button></a>
+                </div>
+                <!-- /.news_-card -->
+              </div>
+              <!-- /.news__row -->
+            </div>
+            <div class="swiper-slide news_-swiper-slide">
+              <div class="news__row">
+                <img src="img/news/img.jpg" alt="img" class="news__image">
+                <div class="news__date"><strong class="news__date--strong">01</strong> <br> Апр</div>
+                <div class="news__card">
+                  <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
+                  <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
+                  <a href="index.html"><button class="button news__button button--primary">Читать далее</button></a>
+                </div>
+                <!-- /.news_-card -->
+              </div>
+              <!-- /.news__row -->
+            </div>
+            <div class="swiper-slide news_-swiper-slide">
+              <div class="news__row">
+                <img src="img/news/img.jpg" alt="img" class="news__image">
+                <div class="news__date"><strong class="news__date--strong">01</strong> <br> Апр</div>
+                <div class="news__card">
+                  <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
+                  <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
+                  <a href="index.html"><button class="button news__button button--primary">Читать далее</button></a>
+                </div>
+                <!-- /.news_-card -->
+              </div>
+              <!-- /.news__row -->
+            </div>
+          </div>
+          <div class="news__nav">
+                      <!-- Add Arrows -->
+          <div class="swiper-button-next news__swiper-button-next"></div>
+          <div class="swiper-button-prev news__swiper-button-prev"></div>
+          </div>
+          <!-- /.news__nav -->
+        </div>
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section news -->
     <section id=feedback class="section feedback">
       <div class="feedback__container">
         <div class="row">
