--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="zxx">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,10 @@
   <link rel="shortcut icon" type="image/ico" href="favicon.ico"/>
 </head>
 <body>
+  <!-- Yandex.Metrika counter -->
+<!-- Yandex.Metrika counter --> <script> (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym"); ym(62291557, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/62291557" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+<noscript><div><img src="https://mc.yandex.ru/watch/62291557" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
   <header>
     <div class="container">
       <div class="menu">
@@ -27,7 +31,7 @@
         <!-- /.nav menu__nav -->
         <div class="contacts menu__contacts">
           <a href="tel:+78129921030" class="phone contacts__phone">+7(812)-992-10-30</a>
-          <button class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
+          <button onclick="ym(99536080, 'reachGoal', 'button'); return true;" class="button contacts__button button--primary" data-toggle="modal">Заказать звонок</button>
 
         </div>
         <!-- /.contacts menu__contacts -->
@@ -50,7 +54,7 @@
               <p class="hero__text">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure 
               </p>
-              <button class="button hero__button button--primary" data-toggle="modal">Обратный звонок</button>
+              <button onclick="ym(99536080, 'reachGoal', 'button'); return true;" class="button hero__button button--primary" data-toggle="modal">Обратный звонок</button>
             </div>
             <!-- /.hero__content -->
       </div>
@@ -226,7 +230,7 @@
               <label for="prices-user-message" class="label form__label  prices__label">Сообщение</label>
               <input type="text" name="userMessage" class="input form__input prices__input" id="prices-user-message" placeholder="Введите Ваше сообщение">
             </div>
-            <button class="button prices__form__button button--primary">Узнать стоимость</button>
+            <button onclick="ym(99536089, 'reachGoal', 'button1'); return true;" class="button prices__form__button button--primary">Узнать стоимость</button>
           </form>
           <!-- /.form prices__form -->
         </div>
@@ -422,8 +426,7 @@
           <div class="swiper-button-next review__swiper-button-next"></div>
           <div class="swiper-button-prev review__swiper-button-prev"></div>
         </div>
-      </div>
-      <a href="index.html"><div class="button button--primary cases__button">Читать еще</div></a>
+        <a href="index.html"><div class="button button--primary cases__button">Читать еще</div></a>
       </div>
       <!-- /.container -->
     </section>
@@ -444,7 +447,7 @@
                 <div class="news__card">
                   <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
                   <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
-                  <a href="index.html"><button class="button news__button button--primary">Читать далее</button></a>
+                  <a href="index.html"><div class="button news__button button--primary">Читать далее</div></a>
                 </div>
                 <!-- /.news_-card -->
               </div>
@@ -457,7 +460,7 @@
                 <div class="news__card">
                   <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
                   <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
-                  <a href="index.html"><button class="button news__button button--primary">Читать далее</button></a>
+                  <a href="index.html"><div class="button news__button button--primary">Читать далее</div></a>
                 </div>
                 <!-- /.news_-card -->
               </div>
@@ -470,7 +473,7 @@
                 <div class="news__card">
                   <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
                   <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
-                  <a href="index.html"><button class="button news__button button--primary">Читать далее</button></a>
+                  <a href="index.html"><div class="button news__button button--primary">Читать далее</div></a>
                 </div>
                 <!-- /.news_-card -->
               </div>
@@ -492,7 +495,7 @@
       <div class="feedback__container">
         <div class="row">
           <div class="col-50">
-            <div class="feedback__title">Остались вопросы? <br> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
+            <div class="feedback__title"> <h3>Остались вопросы?</h3> <br> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
             <div class="feedback__description">
               <div class="feedback__description__item">
                 <strong class="feedback__strong">Адресс</strong>
@@ -524,13 +527,13 @@
               </div>
               <div class="input-group feedback__input-group">
                 <label for="feedback-user-phone" class="label form__label  feedback__label">Телефон</label>
-                <input type="tel" name="userPhone" class="input form__input feedback__input" id="feedback-user-site" placeholder="+7 999 888-88-88">
+                <input type="tel" name="userPhone" class="input form__input feedback__input" id="feedback-user-phone" placeholder="+7 999 888-88-88">
               </div>
               <div class="input-group feedback__input-group">
                 <label for="feedback-user-message" class="label form__label  feedback__label">Сообщение</label>
                 <input type="text" name="userMessage" class="input form__input feedback__input" id="feedback-user-message" placeholder="Введите Ваше сообщение">
               </div>
-              <button class="button feedback__form__button button--light">Отправить</button>
+              <button onclick="ym(99536089, 'reachGoal', 'button1'); return true;" class="button feedback__form__button button--light">Отправить</button>
             </form>
             <!-- /.form prices__form -->
           </div>
