--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                   <div class="shedule__title">Статистика кол-ва переходов из поисковых 
                     систем</div>
                   <div class="shedule__text">Источник: Яндекс Метрика</div>
-                  <img src="img/cases/schedule-cases.jpg" alt="shedule">
+                  <img src="img/cases/schedule-cases.jpg" alt="shedule" class="shedule__img">
                 </div>
               </div>
               <!-- /.row -->
@@ -308,7 +308,7 @@
                   <div class="shedule__title">Статистика кол-ва переходов из поисковых 
                     систем</div>
                   <div class="shedule__text">Источник: Яндекс Метрика</div>
-                  <img src="img/cases/schedule-cases.jpg" alt="shedule">
+                  <img src="img/cases/schedule-cases.jpg" alt="shedule" class="shedule__img">
                 </div>
               </div>
               <!-- /.row -->
@@ -339,7 +339,7 @@
                   <div class="shedule__title">Статистика кол-ва переходов из поисковых 
                     систем</div>
                   <div class="shedule__text">Источник: Яндекс Метрика</div>
-                  <img src="img/cases/schedule-cases.jpg" alt="shedule">
+                  <img src="img/cases/schedule-cases.jpg" alt="shedule" class="shedule__img">
                 </div>
               </div>
               <!-- /.row -->
@@ -370,7 +370,7 @@
             <div class="swiper-slide">
               <div class="review__row">
                 <div class="review__text">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. <br>
                   Incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
                   reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
                  </div>
@@ -426,7 +426,7 @@
           <div class="swiper-button-next review__swiper-button-next"></div>
           <div class="swiper-button-prev review__swiper-button-prev"></div>
         </div>
-        <a href="index.html"><div class="button button--primary cases__button">Читать еще</div></a>
+        <a href="index.html"><div class="button button--primary review__button">Читать еще</div></a>
       </div>
       <!-- /.container -->
     </section>
@@ -495,7 +495,7 @@
       <div class="feedback__container">
         <div class="row">
           <div class="col-50">
-            <div class="feedback__title"> <h3>Остались вопросы?</h3> <br> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
+            <div class="feedback__title"> <h3>Остались вопросы?</h3> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
             <div class="feedback__description">
               <div class="feedback__description__item">
                 <strong class="feedback__strong">Адресс</strong>
