--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
       <div class="feedback__container">
         <div class="row">
           <div class="col-50">
-            <div class="feedback__title"> <h3>Остались вопросы?</h3> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
+            <div class="feedback__title"> <h3 class="feedback__h3">Остались вопросы?</h3> Напишите нам! <br> Отправте Ваше сообщение через форму или <a href="mailto:info@saytspb.ru" class="feedback__link">e-mail</a>.</div>
             <div class="feedback__description">
               <div class="feedback__description__item">
                 <strong class="feedback__strong">Адресс</strong>
