--- a/index.html
+++ b/index.html
@@ -507,9 +507,9 @@
               </div>
               <div class="feedback__description__item">
                 <strong class="feedback__medium">Рабочие дни</strong>
-                <p>Понедельник-Пятница</p>
+                <p class="feedback__p">Понедельник-Пятница</p>
                 <strong class="feedback__medium">Выходные </strong>
-                <p>Суббота-Воскресенье</p>
+                <p class="feedback__p">Суббота-Воскресенье</p>
                 <strong class="feedback__medium">09:00-18:00</strong>
               </div>
             </div>
