--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
           <div class="swiper-button-next primary__swiper-button-next"></div>
           <div class="swiper-button-prev primary__swiper-button-prev"></div>
         </div>
-      <a href="index.html"><div class="button button--primary cases__button">Портфолио</div></a>
+      <div class="button button--primary cases__button">Портфолио</div>
       </div>
       <!-- /.container -->
     </section>
@@ -426,7 +426,7 @@
           <div class="swiper-button-next review__swiper-button-next"></div>
           <div class="swiper-button-prev review__swiper-button-prev"></div>
         </div>
-        <a href="index.html"><div class="button button--primary review__button">Читать еще</div></a>
+        <div class="button button--primary review__button">Читать еще</div>
       </div>
       <!-- /.container -->
     </section>
@@ -447,7 +447,7 @@
                 <div class="news__card">
                   <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
                   <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
-                  <a href="index.html"><div class="button news__button button--primary">Читать далее</div></a>
+                  <div class="button news__button button--primary">Читать далее</div>
                 </div>
                 <!-- /.news_-card -->
               </div>
@@ -460,7 +460,7 @@
                 <div class="news__card">
                   <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
                   <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
-                  <a href="index.html"><div class="button news__button button--primary">Читать далее</div></a>
+                  <div class="button news__button button--primary">Читать далее</div>
                 </div>
                 <!-- /.news_-card -->
               </div>
@@ -473,7 +473,7 @@
                 <div class="news__card">
                   <div class="news__card__title">Важнейшие факторы SEO в 2019 году</div>
                   <div class="news__card__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</div>
-                  <a href="index.html"><div class="button news__button button--primary">Читать далее</div></a>
+                  <div class="button news__button button--primary">Читать далее</div>
                 </div>
                 <!-- /.news_-card -->
               </div>
